--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </h1-->
 
                 <!-- First Blog Post -->
-                <img src="security.png" align="center" width="600"/><br>
+                <img src="http://academic.udayton.edu/phuphung/lab/security.png" align="center" width="600"/><br>
                 The Cyber Security Research Lab is housed in the Department of Computer Science, University of Dayton. The Lab was founded in August 2015, and directed by <a href="http://academic.udayton.edu/PhuPhung">Prof. Phu Phung</a>. 
                 <br>
                 <br>
