--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@ img.onerror = cantload;
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
+    <script src="http://academic.udayton.edu/phuphung/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="http://academic.udayton.edu/phuphung/js/bootstrap.min.js"></script>
 
 
 </body>
