--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 		<!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Work Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Work Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 
     <script>
@@ -18,18 +18,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
     </script>
-	
+
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/fontawesome-all.css" rel="stylesheet"><!-- fontawesome css -->
 	<!-- //css files -->
-	
+
 	<!-- google fonts -->
 	<link href="//fonts.googleapis.com/css?family=Mukta:200,300,400,500,600,700,800&amp;subset=devanagari,latin-ext" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Niramit:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext,thai,vietnamese" rel="stylesheet">
 	<!-- //google fonts -->
-	
+
 </head>
 <body>
 
@@ -42,7 +42,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</h1>
 			<div>
 
-			
+
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -60,10 +60,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a class="nav-link" href="people.html">People <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					<a class="nav-link" href="contact.html">contact <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
-				
+
 			</div>
 		</nav>
 	</div>
@@ -98,9 +98,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 	</section>
-	
-	
-	
+
+
+
 
 
 
@@ -109,10 +109,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 col-md-9">
-					<p class="">Copyright © Phu H. Phung 2015-2019. Latest Update: Feb 2019.  
+					<p class="">Copyright © Phu H. Phung 2015-2019. Latest Update: Feb 2019.
 					</p>
 				</div>
-				
+
 			</div>
 		</div>
 	</section>
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/jquery-2.2.3.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <!-- //js -->
-	
+
 	<!-- dropdown nav -->
     <script>
         $(document).ready(function() {
