--- a/header.html
+++ b/header.html
@@ -9,13 +9,13 @@
 					<a class="navbar-brand" href="index.html"></i> Intelligent Systems Security Lab</a>
 				</h1>
 				<div>
-	
-				
+
+
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 			</div>
-	
+
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ml-lg-4 mr-auto">
 					  <li class="nav-item active">
@@ -34,13 +34,12 @@
 						<a class="nav-link" href="about.html">People <span class="sr-only">(current)</span></a>
 					  </li>
 					  <li class="nav-item active">
-						<a class="nav-link" href="about.html">contact <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="about.html">Contact <span class="sr-only">(current)</span></a>
 					  </li>
 					</ul>
-					
+
 				</div>
 			</nav>
 		</div>
 	</header>
 	<!-- //header -->
-	
