Revising people.html

--- a/people.html
+++ b/people.html
@@ -7,12 +7,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>People || ISSL</title>
+<title>People || ISSECLab</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Work Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Security Research Lab" />
 
     <script>
         addEventListener("load", function () {
@@ -63,7 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					<a class="nav-link" href="research.html">Research & Project <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="research.html">Research <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
 					<a class="nav-link" href="people.html">People <span class="sr-only">(current)</span></a>
@@ -142,11 +141,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </section>
 <!-- //features tabs -->
 <!-- banner bottom -->
-<section class="banner-bottom security-bottom py-5">
+<!--section class="banner-bottom security-bottom py-5">
 		<div class="container py-md-5 py-3">
 				<div class="heading">
 
-						<h3 class="head text-center"> Present Lab members </br>
+						<h3 class="head text-center">Graduate Students </br>
 						</br></br>						</h3>
 
 				</div>
@@ -191,62 +190,102 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			</div>
 		</div>
-	</section>
+	</section-->
 	<!-- banner bottom -->
-<!-- banner bottom -->
-<section class="banner-bottom security-bottom py-5">
-	<div class="container py-md-5 py-3">
-			<div class="heading">
-
-					<h3 class="head text-center">Alumni</br>
-					</br></br>						</h3>
-
-			</div>
-		<div class="row bottom_grids text-center">
-
-					<div class="col-md-4">
-							<img src="images/Profile_Img.png" alt="" class="img-fluid"/>
-							<h4 class="my-3">Vishal</h4>
-						<a href="https://www.linkedin.com/in/vishalpanwarmcs/ " class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
-					</div>
-					<div class="col-md-4">
-							<img src="images/Divya_Img.jpeg" alt="" class="img-fluid"/>
-							<h4 class="my-3">Divya Teja</h4>
-						<a href="https://www.linkedin.com/in/divyateja-yasoju/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
-					</div>
-					<div class="col-md-4">
-							<img src="images/Steven_Img.jpeg" alt="" class="img-fluid"/>
-							<h4 class="my-3">Steven Cap </h4>
-						<a href="https://www.linkedin.com/in/stevencap/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
-					</div>
-
-
-		</div>
-	</div>
-</section>
-
-<!-- banner bottom -->
-
-<section class="banner-bottom security-bottom py-5">
-	<div class="container py-md-5 py-3">
-			<div class="heading">
-
-					<h3 class="head text-center">Visiting Researcher</br>
-					</br></br>						</h3>
-
-			</div>
-		<div class="row bottom_grids text-center">
-
-					<div class="col-md-4">
+  <!-- banner bottom -->
+  <section class="banner-bottom security-bottom py-5">
+  		<div class="container py-md-5 py-3">
+  				<div class="heading">
+            <h3 class="head text-center">Graduate Students </br>
+  					</br></h3>
+  				</div>
+  			<div class="row bottom_grids text-center">
+  				<div class="col-md-4">
+  					<img src="images/Rakesh_Img.jpeg" />
+  					<h4 class="my-3">Rakesh Reddy</h4>
+  					<a href="https://www.linkedin.com/in/rakesh-venkataramareddy/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+           </br></br>
+  				</div>
+          <div class="col-md-4">
+  							<img src="images/Praveen_Img.jpeg" alt="" class="img-fluid"/>
+  							<h4 class="my-3">Panchakshari H</h4>
+  							<a href="https://www.linkedin.com/in/panchakshari-hiremath/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+  						</div>
+  						<div class="col-md-4">
+  								<img src="images/Aksai_Img.jpeg" alt="" class="img-fluid"/>
+  								<h4 class="my-3">Akshai Addaguduru </h4>
+  					<a href="https://www.linkedin.com/in/akshai-addaguduru/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+            </br></br>
+  							</div>
+  		</div>
+      <div class="container py-md-5 py-3">
+  				<div class="heading">
+            <h3 class="head text-center">Undergraduate Students </br>
+  					</br></h3>
+  				</div>
+  			<div class="row bottom_grids text-center">
+  				<div class="col-md-4">
+                  <img src="images/Profile_Img.png" alt="" class="img-fluid"/>
+                  <h4 class="my-3">Jack Armentrout </h4>
+            <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+  			  </div>
+  		</div>
+      <div class="container py-md-5 py-3">
+  				<div class="heading">
+            <h3 class="head text-center">Visitors </br>
+  					</br></h3>
+  				</div>
+  			<div class="row bottom_grids text-center">
+          <div class="col-md-4">
 							<img src="images/Profile_Img.png" alt="" class="img-fluid"/>
 							<h4 class="my-3">Son Vu</h4>
 						<a href="https://www.linkedin.com/in/vu-le-son-3a2b07118/ " class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
 					</div>
+  		</div>
+      <div class="container py-md-5 py-3">
+    			<div class="heading">
 
-      </div>
-    </div>
-  </section>
+    					<h3 class="head text-center">Alumni</br></h3>
 
+    			</div>
+    		<div class="row bottom_grids text-center">
+          <div class="col-md-4">
+              <img src="images/Zho_Img.jpeg" alt="" class="img-fluid"/>
+              <h4 class="my-3">Zhengying Zhou</h4>
+            <a href="https://www.linkedin.com/in/政颖-周-8a8095136/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+          </div>
+          <div class="col-md-4">
+              <img src="images/Profile_Img.png" alt="" class="img-fluid"/>
+              <h4 class="my-3">Bhaghyalakshmi M</h4>
+            <a href="https://www.linkedin.com/in/bhaghyalakshmi-m-b65b807b/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+          </div>
+          <div class="col-md-4">
+              <img src="images/Steven_Img.jpeg" alt="" class="img-fluid"/>
+              <h4 class="my-3">Steven Cap </h4>
+            <a href="https://www.linkedin.com/in/stevencap/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+          </div>
+
+          <div class="col-md-4">
+              <img src="images/Tony_Img.jpeg" alt="" class="img-fluid"/>
+              <h4 class="my-3">Tony Pierce</h4>
+            <a href="https://www.linkedin.com/in/tony-pierce-64812514a/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+          </div>
+    					<div class="col-md-4">
+    							<img src="images/Profile_Img.png" alt="" class="img-fluid"/>
+    							<h4 class="my-3">Vishal Panwar</h4>
+    						<a href="https://www.linkedin.com/in/vishalpanwarmcs/ " class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+    					</div>
+    					<div class="col-md-4">
+    							<img src="images/Divya_Img.jpeg" alt="" class="img-fluid"/>
+    							<h4 class="my-3">Divya Teja</h4>
+    						<a href="https://www.linkedin.com/in/divyateja-yasoju/" class="signin mr-1">linked<i class="fab fa-linkedin"></i></a>
+    					</div>
+
+
+    		</div>
+    	</div>
+  	</section>
+<!-- banner bottom -->
 
 <!-- copyright -->
 <section class="copy-right bg-light py-4">
