Revise the alumni

--- a/index.html
+++ b/index.html
@@ -316,7 +316,19 @@
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
-							<!-- <div class="my-3"><a href=""><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Son Vu, Summer Research, 2019 (Undergraduate Student at Truman State University), <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div> -->
+							<div class="my-3"><a href=""><img src="images/Profile2.png" width="30" style="border-radius: 50%" /></a> Bhaghyalakshmi Muthukumar, MSc student, research assistant, 2017-2018 <a href="https://www.linkedin.com/in/bhaghyalakshmi-m-b65b807b/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+							<div class="my-3"><a href="images/Steven.jpeg"><img src="images/Steven.jpeg" width="30" style="border-radius: 50%" /></a> Zhengying (Steven) Zhou, Undergrad student, CAS Dean Summer Research Fellow, 2018 <a href="https://www.linkedin.com/in/政颖-周-8a8095136/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+							<div class="my-3"><a href="images/Steve.jpeg"><img src="images/Steve.jpeg" width="30" style="border-radius: 50%" /></a> Steven Cap, Undergrad student, research assistant, Summer 2017 <a href="https://www.linkedin.com/in/stevencap/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+							<div class="my-3"><a href="images/Tony.jpeg"><img src="images/Tony.jpeg" width="30" style="border-radius: 50%" /></a> Tony Pierce, Undergrad student, CAS Dean Summer Research Fellow, 2017 <a href="https://www.linkedin.com/in/tony-pierce-64812514a/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+							<div class="my-3"><a href=""><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Vishal Panwar, MSc student, research assistant, 2016-2017 <a href="https://www.linkedin.com/in/vishalpanwarmcs/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+							<div class="my-3"><a href="images/Divya.jpeg"><img src="images/Divya.jpeg" width="30" style="border-radius: 50%" /></a> Divya Teja, MSc student, research assistant, 2015-2016 <a href="https://www.linkedin.com/in/divyateja-yasoju/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+
 						</div>
 					</div>
 				</div><!--- END COL -->
