--- a/index.html
+++ b/index.html
@@ -270,8 +270,19 @@
 	<div class="container py-md-3"><a id="people"></a>
 		<div class="heading">
 			<h3 class="head text-left">People</h3>
-			<p class="my-3  text-Left"> The lab was founded and directed by Dr. Phu H. Phung, Assistant Professor in the Department of Computer Science at the University of Dayton. See his homepage at <a href="http://academic.udayton.edu/PhuPhung">http://academic.udayton.edu/PhuPhung</a>, or <a href="https://www.linkedin.com/in/phungphu/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a>.
-			</p>
+			<br>
+			<h4 class="head text-left">Faculty</h4>
+			<div class="row">
+
+				<div class="col-lg-9">
+					<p class="my-3  text-Left"> The lab was founded and directed by Dr. Phu H. Phung, Assistant Professor in the Department of Computer Science at the University of Dayton. See his homepage at <a href="http://academic.udayton.edu/PhuPhung">http://academic.udayton.edu/PhuPhung</a>, or <a href="https://www.linkedin.com/in/phungphu/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a>.
+				</p>
+				</div>
+				<div class="col-lg-3 col-md-9">
+					<img src="http://academic.udayton.edu/PhuPhung/phu.jpg" alt="Phu Phung" class="img-fluid" width="120" style="border-radius: 50%" />
+				</div>				
+			</div>
+		
 			<h4 class="head text-left">Graduate Students</h4>
 			<div class="row">
 				<div class="col-md-12">
