--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div class="row banner-grids">
 			<div class="col-lg-6 banner-info">
 				<h4 class="mb-3">The Intelligent Systems Security Lab</h4>
-				<p class="mb-4">is housed the Department of Computer Science, University of Dayton, in Anderson 135. The lab was founded in August 2015, and directed by Dr. Phu H. Phung. We are always looking for highly-motivated students interested in doing research in computer security, please click on the link below for the details.</p>
+				<p class="mb-4">is housed the Department of Computer Science, University of Dayton. The lab was founded in August 2015, and directed by Dr. Phu H. Phung. We are always looking for highly-motivated students interested in doing research in computer security, please click on the link below for the details.</p>
 				<a href="#open">Open positions</a> <a href="#research">Research directions</a>
 			</div>
 			<div class="col-lg-6 col-md-9 banner-image">
@@ -262,12 +262,13 @@
 
 					</div>
 				</div><!--- END COL -->
-			</div><!--- END ROW -->
+			</div><!--- END ROW --><a id="people"></a>
 
 		</div>
+	
 	</div>
 
-	<div class="container py-md-3"><a id="people"></a>
+	<div class="container py-md-3">
 		<div class="heading">
 			<h3 class="head text-left">People</h3>
 			<br>
