--- a/index.html
+++ b/index.html
@@ -469,6 +469,16 @@
 
 	<script src="js/smoothscroll.js"></script><!-- Smooth scrolling -->
 	<script src="js/modal.js"></script><!-- Modal -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143000129-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143000129-1');
+</script>
+
 
 
 </body>
