--- a/index.html
+++ b/index.html
@@ -2,21 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<title>Intelligent Systems Security Lab - CS - UDayton</title>
+<title>Intelligent Systems Security Lab - CS - UDayton</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Security Research Lab" />
 
-    <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script>
+<script>
+    addEventListener("load", function () {setTimeout(hideURLbar, 0);}, false);
+	function hideURLbar() {
+        window.scrollTo(0, 1);
+    }
+</script>
 
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
@@ -406,7 +403,7 @@
 					Dayton, OH 45469 <br>
 					Email: phu@udayton[dot]edu <br>
 					Phone: +1 937 229 3831 <br>
-					Web: <a href="https://isseclab-udayton.github.io">https://isseclab-udayton.github.io</a>.
+					Web: <a href="https://isseclab-udayton.github.io">https://isseclab-udayton.github.io</a>
 				</div>
 			</div>
 		</div>
@@ -425,8 +422,9 @@
 
 			</div>
 		</div>
-	</section>
-	<!-- copyright -->
+</section>
+<!-- copyright -->
+
     <!-- js -->
     <script src="js/jquery-2.2.3.min.js"></script>
     <script src="js/bootstrap.js"></script>
@@ -470,16 +468,12 @@
 	<script src="js/smoothscroll.js"></script><!-- Smooth scrolling -->
 	<script src="js/modal.js"></script><!-- Modal -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143000129-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-143000129-1');
-</script>
-
-
-
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143000129-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-143000129-1');
+	</script>
 </body>
 </html>
