Added news and Ph.D.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,33 @@
 			<div class="col-lg-6 col-md-9 banner-image">
 				<img src="images/security_icon.png" alt="" class="img-fluid"/>
 			</div>
-		</div>
+		</div> <!--row banner-grids-->
+		<div class="row">
+				<div class="col-md-12">
+					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+						<div class="panel panel-default">
+							<div class="panel-heading" role="tab" id="headingNews">
+								<h4 class="panel-title">
+									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNews" aria-expanded="true" aria-controls="collapseNews">
+										News
+									</a>
+								</h4>
+							</div>
+							<div id="collapseNews" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingNews">
+								<div class="panel-body">
+									<ul class="list-group">
+										<li class="list-group-item">2019/07/26 - Our department Ph.D. program has been approved by Ohio Board of Education. We expect to receive applications in Spring, and welcome our first six Ph.D. students with full scholarship in Fall 2020. Feel free to contact Dr. Phung if you are interested in doing Ph.D. in computer security at University of Dayton. <img src="images/new.webp" height="50px"></li>
+										<li class="list-group-item">2019/07/25 - Jack presented his summer work joint with Son and Praveen at UD <a href="https://udayton.edu/artssciences/initiatives/summer-undergrad-research-symposium/index.php"> Summer Undergraduate Research Symposium (SURS).</a></li>
+										<li class="list-group-item">2019/07/22 - Rakesh sucessfully defended his Masters thesis, the first thesis carried out in the lab. Congratulations Rakesh!</li>
+									</ul>
+								</div>
+							</div>
+						</div> <!-- pannel-->
+					</div>
+				</div>
+			</div>
 	</div>
+	
 </section>
 <!-- //banner -->
 <!-- faq -->
@@ -96,14 +121,14 @@
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingOne">
+							<div class="panel-heading" role="tab" id="headingNews">
 								<h4 class="panel-title">
 									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 										User-centric policy enforcement for the Web.
 									</a>
 								</h4>
 							</div>
-							<div id="collapseOne" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingOne">
+							<div id="collapseOne" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingNews">
 								<div class="panel-body">
 									<p>We aim to provide end-users friendly tools to monitor the Web to ensure that it does not compromise the security and privacy of users.
 									</p>
