--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="col-lg-6 banner-info">
 				<h4 class="mb-3">The Intelligent Systems Security Lab</h4>
 				<p class="mb-4">is housed the Department of Computer Science, University of Dayton. The lab was founded in August 2015, and directed by Dr. Phu H. Phung. We are always looking for highly-motivated students interested in doing research in computer security, please click on the link below for the details.</p>
-				<a href="#open">Open positions</a> <a href="#research">Research directions</a>
+				<a href="#open">Ph.D. & RA positions</a> <a href="#research">Research directions</a>
 			</div>
 			<div class="col-lg-6 col-md-9 banner-image">
 				<img src="images/security_icon.png" alt="" class="img-fluid"/>
@@ -93,7 +93,12 @@
 							<div id="collapseNews" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingNews">
 								<div class="panel-body">
 									<ul class="list-group">
-										<li class="list-group-item">2019/07/26 - Our department Ph.D. program has been approved by Ohio Board of Education. We expect to receive applications in Spring, and welcome our first six Ph.D. students with full scholarship in Fall 2020. Feel free to contact Dr. Phung if you are interested in doing Ph.D. in computer security at University of Dayton. <img src="images/new.webp" height="50px"></li>
+
+										<li class="list-group-item">2019/09/20 - The work from our lab summer 2019 project MyWebGuard has been accepted at <a href="http://fdse.hcmut.edu.vn/">The 6th International Conference on Future Data and Security Engineering 2019</a>, and will be published in LNCS 11814 - Springer Verlag. Congratulations to Praveen, Jack, and Son!</li>
+
+										
+										<li class="list-group-item">2019/09/15 - <a href="https://www.linkedin.com/in/rakesh-venkataramareddy/">Rakesh</a> started his job as a Software Engineer at Pearson Technology after getting 3 competitive offers. Congratulations, Rakesh!</li>
+
 										<li class="list-group-item">2019/07/25 - Jack presented his summer work joint with Son and Praveen at UD <a href="https://udayton.edu/artssciences/initiatives/summer-undergrad-research-symposium/index.php"> Summer Undergraduate Research Symposium (SURS).</a></li>
 										<li class="list-group-item">2019/07/22 - Rakesh sucessfully defended his Masters thesis, the first thesis carried out in the lab. Congratulations Rakesh!</li>
 									</ul>
@@ -374,7 +379,11 @@
 	<div class="container py-md-3"><a id="open"></a>
 		<div class="heading">
 			<h3 class="head text-left">Open positions</h3>
-			<p class="my-3  text-Left">There is no funded research assistant positions at the moment, however, the lab is always looking for UD or external students to join our research projects. If you are interested in doing research on the related topics, feel free to contact Dr. Phu Phung for further information. We are also welcome visitors from elsewhere to collaborate in our research activities.
+			<p class="my-3  text-Left"><img src="images/new.webp" height="50px">Our department is recruiting about 5-6 Ph.D. students with full scholarship (tution waiver + monthly stipends). Application deadline will be March 1st to start in the Fall semester. Contact Dr. Phu Phung if you are interested in doing Ph.D. in computer security at University of Dayton.
+			</p>
+			<!--li class="list-group-item">2019/07/26 - Our department Ph.D. program has been approved by Ohio Board of Education. We expect to receive applications in Spring, and welcome our first six Ph.D. students with full scholarship in Fall 2020. Feel free to contact Dr. Phung if you are interested in doing Ph.D. in computer security at University of Dayton. <img src="images/new.webp" height="50px"></li-->
+
+			<p class="my-3  text-Left">The lab is always looking for UD or external students to join our research projects. If you are interested in doing research on the lab's related topics, feel free to contact Dr. Phu Phung for further information. We are also welcome visitors from elsewhere to collaborate in our research activities. Funded research assistant positions will be announced when available. 
 			</p>
 			<h4 class="head text-left">Some photos of the lab's activities</h4>
 			<div class="row">
