--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 								<div class="panel-body">
 									<ul class="list-group">
 
+										<li class="list-group-item">2019/11/20 - Our work on HIT4Mal: Hybrid Image Transformation for Malware Classification is published on <a href="https://doi.org/10.1002/ett.3789">Wiley Transactions on Emerging Telecommunications Technologies.</a></li>
+
+										<li class="list-group-item">2019/11/20 - Praveen, Jack present our MyWebGuard paper in <a href="https://1850.udayton.edu/acm/home/">ACM Student Chapter at University of Dayton</a></li>
+
 										<li class="list-group-item">2019/09/20 - The work from our lab summer 2019 project MyWebGuard has been accepted at <a href="http://fdse.hcmut.edu.vn/">The 6th International Conference on Future Data and Security Engineering 2019</a>, and will be published in LNCS 11814 - Springer Verlag. Congratulations to Praveen, Jack, and Son!</li>
 
 										
@@ -379,7 +383,7 @@
 	<div class="container py-md-3"><a id="open"></a>
 		<div class="heading">
 			<h3 class="head text-left">Open positions</h3>
-			<p class="my-3  text-Left"><img src="images/new.webp" height="50px">Our department is recruiting about 5-6 Ph.D. students with full scholarship (tution waiver + monthly stipends). Application deadline will be March 1st to start in the Fall semester. Contact Dr. Phu Phung if you are interested in doing Ph.D. in computer security at University of Dayton.
+			<p class="my-3  text-Left"><img src="images/new.webp" height="50px">Our department is recruiting about 5-6 Ph.D. students with full scholarship (tution waiver + monthly stipends). Application deadline will be in March 1st to start in the Fall semester. Contact Dr. Phu Phung if you are interested in doing Ph.D. in computer security at University of Dayton.
 			</p>
 			<!--li class="list-group-item">2019/07/26 - Our department Ph.D. program has been approved by Ohio Board of Education. We expect to receive applications in Spring, and welcome our first six Ph.D. students with full scholarship in Fall 2020. Feel free to contact Dr. Phung if you are interested in doing Ph.D. in computer security at University of Dayton. <img src="images/new.webp" height="50px"></li-->
 
