--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								<div class="panel-body">
 									<p>We aim to provide end-users friendly tools to monitor the Web to ensure that it does not compromise the security and privacy of users.
 									</p>
-									Current publications: <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">TDSC'2015 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://dl.acm.org/citation.cfm?id=1533067">ASIACSS'2009 <i class="fas fa-sign-in-alt"></i></a>. 
+									Current publications: <a href="https://link.springer.com/chapter/10.1007/978-3-030-35653-8_33">FDSE'2019 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">TDSC'2015 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://dl.acm.org/citation.cfm?id=1533067">ASIACSS'2009 <i class="fas fa-sign-in-alt"></i></a>. 
 								</div>
 							</div>
 						</div> <!-- pannel-->
@@ -184,7 +184,9 @@
 							</div>
 							<div id="collapseMore" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingMore">
 								<div class="panel-body">
-								<p>	More projects will come</p>
+								<p>	Machine Learning in Security: <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789">ETT'19</a>,  <a href="https://arxiv.org/abs/1909.07227">NICS'19</a></p>
+								<p>	Intelligent Systems: <a href="https://ieeexplore.ieee.org/document/8343221/">ICOIN'18</a>,  <a href="http://ieeexplore.ieee.org/abstract/document/8114652/">IE'17</a>, <a href="http://ceur-ws.org/Vol-1964/">MAICS'17</a></p>
+
 								</div>
 							</div>
 						</div><!-- pannel-->
@@ -198,14 +200,30 @@
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingPub2018">
+							<div class="panel-heading" role="tab" id="headingPub2019">
 								<h4 class="panel-title">
-									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePub2018" aria-expanded="true" aria-controls="collapsePub2018">
-										2018
+									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePub2019" aria-expanded="true" aria-controls="collapsePub2019">
+										2019
 									</a>
 								</h4>
 							</div>
-							<div id="collapsePub2018" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingPub2018">
+							<div id="collapsePub2019" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingPub2019">
+									<div class="panel-body">
+											<ul class="list-group">
+												<li class="list-group-item">MyWebGuard: Toward a User-Oriented Tool for Security and Privacy Protection on the Web <a href="https://link.springer.com/chapter/10.1007/978-3-030-35653-8_33"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://link.springer.com/book/10.1007/978-3-030-35653-8">FDSE'2019</a>.</li>
+												<li class="list-group-item">HIT4Mal: Hybrid image transformation for malware classification <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789"> ETT'2019</a>.</li>
+											</ul>
+								</div>
+							</div>
+						</div> <!-- pannel-->
+						<div class="panel panel-default">
+							<div class="panel-heading" role="tab" id="headingPub2018">
+								<h4 class="panel-title">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePub2018" aria-expanded="false" aria-controls="collapsePub2018"> 2018
+									</a>
+								</h4>
+							</div>
+							<div id="collapsePub2018" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingPub2018">
 									<div class="panel-body">
 											<ul class="list-group">
 												<li class="list-group-item">A Security Policy Enforcement Framework for Controlling IoT Tenant Applications in the Edge <a href="https://dl.acm.org/citation.cfm?id=3277602"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://iot-conference.org/iot2018">IoT'2018</a>.</li>
