adding Aishwarya details to page

--- a/index.html
+++ b/index.html
@@ -342,11 +342,13 @@
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
 
-							<div class="my-3"><a href="images/Praveen.jpeg" target="_blank"><img src="images/Praveen.jpeg" width="30" style="border-radius: 50%" /></a> Panchakshari (Praveen) Hiremath, MSc Thesis, 2018-2020, <a href="https://www.linkedin.com/in/panchakshari-hiremath/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+							<div class="my-3"><a href="images/Praveen.jpeg" target="_blank"><img src="images/Praveen.jpeg" width="30" style="border-radius: 50%" /></a> Panchakshari (Praveen) Hiremath, MSc Thesis, 2018-2020, <a href="https://www.linkedin.com/in/pnhiremath/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
 							<div class="my-3"><a href="images/Akshai.jpeg" target="_blank"><img src="images/Akshai.jpeg" width="30" style="border-radius: 50%" /></a> Akshai Addaguduru, MSc Thesis, 2018-2020, <a href="https://www.linkedin.com/in/akshai-addaguduru/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
               <div class="my-3"><a href="images/HuuHa.jpg" target="_blank"><img src="images/HuuHa.jpg" width="30" style="border-radius: 50%" /></a> Huu Ha Nguyen, 2020-2021, <a href="https://www.linkedin.com/in/summer0nguyen/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+              <div class="my-3"><a href="images/AishwaryaMN.jpg" target="_blank"><img src="images/AishwaryaMN.jpg" width="30" style="border-radius: 50%" /></a> Aishwarya Marghatta Nandeesh, MSc 2019-2021, <a href="https://www.linkedin.com/in/aishwarya-mn/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
 						</div>
 					</div>
 				</div><!--- END COL -->
