--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 				</p>
 				</div>
 				<div class="col-lg-3 col-md-9">
-					<img src="http://academic.udayton.edu/PhuPhung/phu.jpg" alt="Phu Phung" class="img-fluid" width="120" style="border-radius: 50%" />
+					<img src="https://academic.udayton.edu/PhuPhung/phu.jpg" alt="Phu Phung" class="img-fluid" width="120" style="border-radius: 50%" />
 				</div>
 			</div>
 
@@ -455,7 +455,7 @@
 			<h3 class="head text-left">Contact</h3>
 			<div class="row">
 				<div class="col-lg-4 col-md-5 col-6 px-lg-5">
-					<img src="images/UD-logo.png" alt="" class="img-fluid"/>
+					<img src="images/ud-logo.png" alt="" class="img-fluid"/>
 				</div>
 				<div class="col-lg-6 offset-lg-2 col-md-7 text-right px-lg-5 mt-md-0 mt-4">
 					<h3 class="my-2">Intelligent Systems Security Lab</h3>
@@ -529,7 +529,7 @@
     <!-- //dropdown nav -->
 
 	<script src="js/smoothscroll.js"></script><!-- Smooth scrolling -->
-	<script src="js/modal.js"></script><!-- Modal -->
+	<!-- <script src="js/modal.js"></script> -->  <!-- Modal -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143000129-1"></script>
 	<script>
