--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
 							<div id="collapseNews" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingNews">
 								<div class="panel-body">
 									<ul class="list-group">
-                    <li class="list-group-item">2020/01/06 - Welcome new member Huu Ha Nguyen joining the lab</li>
+										<li class="list-group-item">2020/02/16 - Our work "<a href="https://www.researchgate.net/publication/339326697_A_Multi-Party_Fine-Grained_Permission_and_Policy_Enforcement_Framework_for_Hybrid_Mobile_Applications">A Multi-Party, Fine-Grained Permission and Policy Enforcement Framework for Hybrid Mobile Applications</a>" has been accepted to publish in <a href="https://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security.</a> Congratulations to our former lab members <a href="https://www.linkedin.com/in/rakesh-venkataramareddy/">Rakesh</a>, <a href="https://www.linkedin.com/in/stevencap/" class="signin mr-1">Steven</a>, and <a href="https://www.linkedin.com/in/tony-pierce-64812514a/">Tony</a>!</li>
+                    					
+                    					<li class="list-group-item">2020/01/06 - Welcome new member Huu Ha Nguyen joining the lab.</li>
 
-										<li class="list-group-item">2019/11/20 - Our work on HIT4Mal: Hybrid Image Transformation for Malware Classification is published on <a href="https://doi.org/10.1002/ett.3789">Wiley Transactions on Emerging Telecommunications Technologies.</a></li>
+										<li class="list-group-item">2019/11/20 - Our work "<a href="https://doi.org/10.1002/ett.3789">HIT4Mal: Hybrid Image Transformation for Malware Classification</a>" is published in <a href="https://onlinelibrary.wiley.com/journal/21613915">Wiley Transactions on Emerging Telecommunications Technologies.</a></li>
 
-										<li class="list-group-item">2019/11/20 - Praveen, Jack present our MyWebGuard paper in <a href="https://1850.udayton.edu/acm/home/">ACM Student Chapter at University of Dayton</a></li>
+										<li class="list-group-item">2019/11/20 - Praveen, Jack present our MyWebGuard paper in <a href="https://1850.udayton.edu/acm/home/">ACM Student Chapter at University of Dayton.</a></li>
 
                     <li class="list-group-item">2019/10/16 - The lab was awarded $76,800.00 from <a href="https://novobi.com/">Novobi LLC</a> for the project <i>Security Issues and Solutions for a Software-as-a-Service Product</i> in 2 years 2020-2021 <img src="images/new.webp" height="50px"/></li>
 
