--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<img src="images/security_icon.png" alt="" class="img-fluid"/>
 			</div>
 		</div> <!--row banner-grids-->
-		<div class="row">
+		<a id="news"></a><div class="row">
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
@@ -93,7 +93,7 @@
 							<div id="collapseNews" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingNews"> 
 								<div class="panel-body">
 									<ul class="list-group">
-										<a id="news"></a><li class="list-group-item">2020/02/16 - Our work "<a href="https://www.researchgate.net/publication/339326697_A_Multi-Party_Fine-Grained_Permission_and_Policy_Enforcement_Framework_for_Hybrid_Mobile_Applications">A Multi-Party, Fine-Grained Permission and Policy Enforcement Framework for Hybrid Mobile Applications</a>" has been accepted to publish in the <a href="https://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security</a>. Congratulations to our former lab members <a href="https://www.linkedin.com/in/rakesh-venkataramareddy/">Rakesh</a>, <a href="https://www.linkedin.com/in/stevencap/" class="signin mr-1">Steven</a>, and <a href="https://www.linkedin.com/in/tony-pierce-64812514a/">Tony</a>!</li> 
+										<li class="list-group-item">2020/02/16 - Our work "<a href="https://www.researchgate.net/publication/339326697_A_Multi-Party_Fine-Grained_Permission_and_Policy_Enforcement_Framework_for_Hybrid_Mobile_Applications">A Multi-Party, Fine-Grained Permission and Policy Enforcement Framework for Hybrid Mobile Applications</a>" has been accepted to publish in the <a href="https://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security</a>. Congratulations to our former lab members <a href="https://www.linkedin.com/in/rakesh-venkataramareddy/">Rakesh</a>, <a href="https://www.linkedin.com/in/stevencap/" class="signin mr-1">Steven</a>, and <a href="https://www.linkedin.com/in/tony-pierce-64812514a/">Tony</a>!</li> 
                     					
                     					<li class="list-group-item">2020/01/06 - Welcome new member Huu Ha Nguyen joining the lab.</li>
 
