Added Uday Aditya Profile details to webpage

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
 
               <div class="my-3"><a href="images/HuuHa.jpg" target="_blank"><img src="images/HuuHa.jpg" width="30" style="border-radius: 50%" /></a> Huu Ha Nguyen, 2020-2021, <a href="https://www.linkedin.com/in/summer0nguyen/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
               <div class="my-3"><a href="images/AishwaryaMN.jpg" target="_blank"><img src="images/AishwaryaMN.jpg" width="30" style="border-radius: 50%" /></a> Aishwarya Marghatta Nandeesh, MSc 2019-2021, <a href="https://www.linkedin.com/in/aishwarya-mn/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+			  <div class="my-3"><a href="images/Aditya.jpg" target="_blank"><img src="images/Aditya.jpg" width="30" style="border-radius: 50%" /></a> Uday Aditya Kurapati, MSc 2020-2021, <a href="https://www.linkedin.com/in/uday-aditya-k/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
 						</div>
 					</div>
