--- a/index.html
+++ b/index.html
@@ -205,6 +205,23 @@
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
+							<div class="panel-heading" role="tab" id="headingPub2020">
+								<h4 class="panel-title">
+									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePub2020" aria-expanded="true" aria-controls="collapsePub2020">
+										2020
+									</a>
+								</h4>
+							</div>
+							<div id="collapsePub2019" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingPub2020">
+									<div class="panel-body">
+											<ul class="list-group">
+												<li class="list-group-item">A Multi-Party, Fine-Grained Permission and Policy Enforcement Framework for Hybrid Mobile Applications <a href="https://content.iospress.com/articles/journal-of-computer-security/jcs191350"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://content.iospress.com/articles/journal-of-computer-security/jcs191350">Journal of Computer Security</a>.</li>
+											</ul>
+								</div>
+							</div>
+						</div> <!-- pannel-->
+
+                        <div class="panel panel-default">
 							<div class="panel-heading" role="tab" id="headingPub2019">
 								<h4 class="panel-title">
 									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePub2019" aria-expanded="true" aria-controls="collapsePub2019">
