modified:   index.html

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 									<div class="panel-body">
 											<ul class="list-group">
 												<li class="list-group-item">A Multi-Party, Fine-Grained Permission and Policy Enforcement Framework for Hybrid Mobile Applications <a href="https://content.iospress.com/articles/journal-of-computer-security/jcs191350"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://content.iospress.com/articles/journal-of-computer-security/jcs191350">Journal of Computer Security</a>.</li>
+                                                <li class="list-group-item">Secure CAPTCHAs via Object Segment Collages <a href="https://doi.org/10.1109/ACCESS.2020.2989258"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639">IEEE Access</a>.</li>
 											</ul>
 								</div>
 							</div>
