modified:   index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 							<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 								<div class="panel-body">
 								<p>We are working on novel policy enforcementframework for hybrid mobile apps to enforce useful security and usage policies, specified by the developers and can be customized by the users.</p>
-								Current publications: <a href="https://ecommons.udayton.edu/cps_fac_pub/138/">MoST'2017 <i class="fas fa-sign-in-alt"></i></a>.
+								Current publications: <a href="https://content.iospress.com/articles/journal-of-computer-security/jcs191350">JCS'2020 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://ecommons.udayton.edu/cps_fac_pub/138/">MoST'2017 <i class="fas fa-sign-in-alt"></i></a>.
 								</div>
 							</div>
 						</div><!-- pannel-->
@@ -189,7 +189,7 @@
 							</div>
 							<div id="collapseMore" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingMore">
 								<div class="panel-body">
-								<p>	Machine Learning in Security: <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789">ETT'19</a>,  <a href="https://arxiv.org/abs/1909.07227">NICS'19</a></p>
+								<p>	Machine Learning in Security:  <a href="https://doi.org/10.1109/ACCESS.2020.2989258">IEEE Access'20</a>, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789">ETT'19</a>,  <a href="https://doi.org/10.1109/NICS48868.2019.9023876">NICS'19</a></p>
 								<p>	Intelligent Systems: <a href="https://ieeexplore.ieee.org/document/8343221/">ICOIN'18</a>,  <a href="http://ieeexplore.ieee.org/abstract/document/8114652/">IE'17</a>, <a href="http://ceur-ws.org/Vol-1964/">MAICS'17</a></p>
 
 								</div>
@@ -233,6 +233,7 @@
 							<div id="collapsePub2019" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingPub2019">
 									<div class="panel-body">
 											<ul class="list-group">
+                                                <li class="list-group-item">A Convolutional Transformation Network for Malware Classification <a href="https://doi.org/10.1109/NICS48868.2019.9023876"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://ieeexplore.ieee.org/xpl/conhome/9018346/proceeding"> NICS'2019</a>.</li>
 												<li class="list-group-item">MyWebGuard: Toward a User-Oriented Tool for Security and Privacy Protection on the Web <a href="https://link.springer.com/chapter/10.1007/978-3-030-35653-8_33"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://link.springer.com/book/10.1007/978-3-030-35653-8">FDSE'2019</a>.</li>
 												<li class="list-group-item">HIT4Mal: Hybrid image transformation for malware classification <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789"> <i class="fas fa-sign-in-alt"></i></a>, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ett.3789"> ETT'2019</a>.</li>
 											</ul>
