--- a/index.html
+++ b/index.html
@@ -400,17 +400,7 @@
 				</div><!--- END COL -->
 			</div><!--- END ROW -->
 
-			<h4 class="head text-left">Visitors</h4>
-			<div class="row">
-				<div class="col-md-12">
-					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-						<div class="panel panel-default">
-
-							<div class="my-3"><a href="images/Son.jpg" target="_blank"><img src="images/Son.jpg" width="30" style="border-radius: 50%" /></a> Son Vu, Summer Research, 2019 (Undergraduate Student at Truman State University), <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
-						</div>
-					</div>
-				</div><!--- END COL -->
-			</div><!--- END ROW -->
+			
 
 			<h4 class="head text-left">Alumni</h4>
 			<div class="row">
@@ -436,6 +426,19 @@
 					</div>
 				</div><!--- END COL -->
 			</div><!--- END ROW -->
+
+            <h4 class="head text-left">Past Visitors</h4>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+						<div class="panel panel-default">
+
+							<div class="my-3"><a href="images/Son.jpg" target="_blank"><img src="images/Son.jpg" width="30" style="border-radius: 50%" /></a> Son Vu, Summer Research, 2019 (Undergraduate Student at Truman State University), <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+						</div>
+					</div>
+				</div><!--- END COL -->
+			</div><!--- END ROW -->
+
 		</div>
 	</div>
 
