--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 				</p>
 				</div>
 				<div class="col-lg-3 col-md-9">
-					<img src="https://academic.udayton.edu/PhuPhung/phu.jpg" alt="Phu Phung" class="img-fluid" width="120" style="border-radius: 50%" />
+					<img src="images/phu.jpg" alt="Phu Phung" class="img-fluid" width="200" style="border-radius: 50%" />
 				</div>
 			</div>
 
