--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 							
 							<div class="my-3"><a href=""><img src="images/Profile2.png" width="30" style="border-radius: 50%" /></a> Kelly Ngoc Hoang, CAS Dean's Summer Research Fellow, 2020 <a href="https://www.linkedin.com/in/kellyhoang0407/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
-							<div class="my-3"><a href=""><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Zachary Rowland, CAS Dean's Summer Research Fellow, 2020 <a href="https://www.linkedin.com/in/zachary-rowland-771930172/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+							<div class="my-3"><a href=""><img src="images/Zachary.jpg" width="30" style="border-radius: 50%" /></a> Zachary Rowland, CAS Dean's Summer Research Fellow, 2020 <a href="https://www.linkedin.com/in/zachary-rowland-771930172/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 						</div>
 					</div>
 				</div><!--- END COL -->
