--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 							<div id="collapseNews" class="panel-collapse collapse in collapse show" role="tabpanel" aria-labelledby="headingNews"> 
 								<div class="panel-body">
 									<ul class="list-group">
+
+										<li class="list-group-item">2020/06/18 - Our extended work on MyWebGuard has been published in <a href="https://doi.org/10.1007/s42979-020-00237-5">Springer-Nature Computer Science</a>!</li>
+
+										
 										<li class="list-group-item">2020/05/16 - Congratulations to <a href="https://www.linkedin.com/in/zachary-rowland-771930172/">Zachary Rowland</a>, Han Le, <a href="https://www.linkedin.com/in/kellyhoang0407/">Kelly Ngoc Hoang</a>, and  <a href="https://www.linkedin.com/in/jack-armentrout-b47162189/">Jack Armentrout</a> for being awarded the UDayton College Arts and Sciences (CAS) <a href="https://udayton.edu/artssciences/initiatives/deans-summer-fellowship/index.php">Dean's Summer Fellowship</a> and joining our lab in Summer 2020.</li> 
 
 										<li class="list-group-item">2020/04/21 - Our joint work with <a href="https://sites.google.com/site/vantam/">Dr. Tam V. Nguyen and his Vision and Mixed Reality Lab</a> "<a href="https://doi.org/10.1109/ACCESS.2020.2989258">Secure Captchas via Object Segment Collages</a>", funded by <a href="https://udayton.edu/stem-catalyst/2017-awards/captcha.php">UDayton STEM Catalyst grant</a>, has been published in the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639">IEEE Access Journal</a>.</li>
@@ -167,7 +171,7 @@
 								<div class="panel-body">
 									<p>We aim to provide end-users friendly tools to monitor the Web to ensure that it does not compromise the security and privacy of users.
 									</p>
-									Current publications: <a href="https://link.springer.com/chapter/10.1007/978-3-030-35653-8_33">FDSE'2019 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">TDSC'2015 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://dl.acm.org/citation.cfm?id=1533067">ASIACSS'2009 <i class="fas fa-sign-in-alt"></i></a>.
+									Current publications: <a href="https://doi.org/10.1007/s42979-020-00237-5">SNCS'2020 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://link.springer.com/chapter/10.1007/978-3-030-35653-8_33">FDSE'2019 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8858">TDSC'2015 <i class="fas fa-sign-in-alt"></i></a>, <a href="https://dl.acm.org/citation.cfm?id=1533067">ASIACSS'2009 <i class="fas fa-sign-in-alt"></i></a>.
 								</div>
 							</div>
 						</div> <!-- pannel-->
