add TJ Dean's Summer Research Fellow 2021 information

--- a/index.html
+++ b/index.html
@@ -427,7 +427,9 @@
 							
 							<div class="my-3"><a href=""><img src="images/Profile2.png" width="30" style="border-radius: 50%" /></a> Kelly Ngoc Hoang, CAS Dean's Summer Research Fellow, 2020 <a href="https://www.linkedin.com/in/kellyhoang0407/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
-							<div class="my-3"><a href=""><img src="images/Zachary.jpg" width="30" style="border-radius: 50%" /></a> Zachary Rowland, CAS Dean's Summer Research Fellow, 2020 <a href="https://www.linkedin.com/in/zachary-rowland-771930172/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+                            <div class="my-3"><a href=""><img src="images/Zachary.jpg" width="30" style="border-radius: 50%" /></a> Zachary Rowland, CAS Dean's Summer Research Fellow, 2020 <a href="https://www.linkedin.com/in/zachary-rowland-771930172/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+                            
+                            <div class="my-3"><a href=""><img src="images/TJ.png" width="30" style="border-radius: 50%" /></a> TJ Nicholson, CAS Dean's Summer Research Fellow, 2021 <a href="www.linkedin.com/in/timothy-nicholson-0b53a5207/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 						</div>
 					</div>
 				</div><!--- END COL -->
