--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 	<div class="container py-md-3"><a id="open"></a>
 		<div class="heading">
 			<h3 class="head text-left">Open positions</h3>
-			<p class="my-3  text-Left"><img src="images/new.webp" height="50px">Our department is recruiting about new Ph.D. students with full scholarship (tution waiver + monthly stipends). Application deadline will be in March 1st to start in the Fall semester. Contact Dr. Phu Phung if you are interested in doing Ph.D. in computer security at University of Dayton.
+			<p class="my-3  text-Left"><img src="images/new.webp" height="50px">Our department is recruiting new Ph.D. students with full scholarship (tution waiver + monthly stipends). Application deadline will be in March 1st to start in the Fall semester. Contact Dr. Phu Phung if you are interested in doing Ph.D. in computer security at University of Dayton.
 			</p>
 
 			<p class="my-3  text-Left">The lab is always looking for UD or external students to join our research projects. If you are interested in doing research on the lab's related topics, feel free to contact Dr. Phu Phung for further information. We are also welcome visitors from elsewhere to collaborate in our research activities. Funded research assistant positions will be announced when available.
@@ -559,7 +559,7 @@
 				</div>
 				<div class="col-lg-6 offset-lg-2 col-md-7 text-right px-lg-5 mt-md-0 mt-4">
 					<h3 class="my-2">Intelligent Systems Security Lab</h3>
-					Anderson 135 <br>
+					Hathcock Hall 108 <br>
 					Department of Computer Science  <br>
 					University of Dayton	<br>
 					300 College Park Ave <br>
@@ -579,7 +579,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 col-md-9">
-					<p class="">Copyright © Phu H. Phung 2015-2020. Latest Update: June 2020.
+					<p class="">Copyright © Phu H. Phung 2015-2022. Latest Update: May 2022.
 					</p>
 				</div>
 
