--- a/index.html
+++ b/index.html
@@ -446,6 +446,8 @@
 			  				<div class="my-3"><a href="images/Aditya.jpg" target="_blank"><img src="images/Aditya.jpg" width="30" style="border-radius: 50%" /></a> Uday Aditya Kurapati, MSc Research Student, 2020-2021, <a href="https://www.linkedin.com/in/uday-aditya-k/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
 
 			  				<div class="my-3"><a href="images/Annu.jpg" target="_blank"><img src="images/Annu.jpg" width="30" style="border-radius: 50%" /></a> Annu, MSc Research Student, 2020-2021, <a href="https://www.linkedin.com/in/annulnu/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a></div>
+
+							<div class="my-3"><a href="images/Kartik.jpeg" target="_blank"><img src="images/Kartik.jpeg" width="30" style="border-radius: 50%" /></a> Kartik Desai, MSc Research Student, 2019-2020, <a href="https://www.linkedin.com/in/kartik-desai/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a> (Now Software Engineer)</div>
               				
               				<div class="my-3"><a href="images/Rakesh.jpeg" target="_blank"><img src="images/Rakesh.jpeg" width="30" style="border-radius: 50%" /></a> Rakesh S.V. Reddy, <a target="blank"  rel="noopener noreferrer" href="http://rave.ohiolink.edu/etdc/view?acc_num=dayton1564744609523447">MSc Thesis<i class="fas fa-sign-in-alt"></i></a> Advisee and Gradudate Assisstant, 2018-2019, <a href="https://www.linkedin.com/in/rakesh-venkataramareddy/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a> (Now Software Engineer at Pearson)</div>
 
@@ -456,6 +458,8 @@
 							<div class="my-3"><a href="images/Profile.png" target="_blank"><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Javeen Dharma Raj, MSc student, teaching assistant, 2016-2017 <a href="https://www.linkedin.com/in/jeevan-dharma-raj/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a> (Now Business Intelligence Developer at PROMPT Analytics LLC)</div>
 
 							<div class="my-3"><a href="images/Veda.jpeg" target="_blank"><img src="images/Veda.jpeg" width="30" style="border-radius: 50%" /></a> Veda Dubey, MSc student, teaching assistant, 2015 <a href="https://www.linkedin.com/in/veda-dubey/" class="signin mr-1">Linked<i class="fab fa-linkedin"></i></a> (Now ServiceNow Scrum Master)</div>
+
+							
 
 
 
