Uncomment Undergraduate Students + Add Mohammad Ali Student

--- a/index.html
+++ b/index.html
@@ -411,12 +411,14 @@
 					</div>
 				</div><!--- END COL -->
 			</div><!--- END ROW -->
-			<!--h4 class="head text-left">Undergraduate Students</h4-->
+			<h4 class="head text-left">Undergraduate Students</h4>
 			<div class="row">
 				<div class="col-md-12">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
 							
+							<div class="my-3"><a href="images/Profile.png" target="_blank"><img src="images/Profile.png" width="30" style="border-radius: 50%" /></a> Mohammad Ali, BSc Student, 2022-Present <a target="blank" rel="noopener noreferrer" href="https://alim-pi.xyz" class="signin mr-1">Portfolio<i class="fas fa-sign-in-alt"></i></a></div>
+
 						</div>
 					</div>
 				</div><!--- END COL -->
